fix(LoginForm): add background color and padding to welcome text for improved visibility

--- a/src/components/Forms/LoginForm/LoginForm.module.scss
+++ b/src/components/Forms/LoginForm/LoginForm.module.scss
@@ -9,7 +9,7 @@
 }
 
 .welcome {
-  @apply text-black text-2xl font-bold;
+  @apply text-black text-2xl font-bold bg-bomborange p-2 rounded-sm;
 }
 
 .logo {
